# fastapi_template

./: .env  pyproject.toml
app/: config.py  database.py  exception.py  main.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 7591924c9c45_change_model_user.py  be583825bd9b_initial_migrarion.py
app/pages/: router.py
app/users/: auth.py  dao.py  dependensies.py  models.py  router.py  schemas.py
data/: db.sqlite3
